Fixed icons and spacing

--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -345,3 +345,8 @@
   .payment-input {
     border: 0.5px solid #C0C4CC !important;
   }
+  
+.w-full {
+  width: 100% !important;
+}
+
